# server-client-communication

./: README.md
client/: Makefile.am  Makefile.in  configure.in
client/include/: client.h  getip.h  malloc.h  meminfo.h  memory.h  tcp.h
client/src/: .tcp.c.swp  Makefile.am  Makefile.in  client.c  getip.c  malloc.c  meminfo.c  memory.c  net.c
server/: Makefile.am  Makefile.in  configure.in
server/include/: server.h
server/src/: Makefile.am  Makefile.in  server.c
server/test/: client_tcp.c
